[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18"
simple_math = { git = "https://github.com/Mateholiker/simple_math" }
egui_extras = { version = "0.18", features = ["image"]}
#simple_math = { path = "/home/jan/programming/rust/simple_math" }