[package]
name = "canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18"
egui_extras = { version = "0.18", features = ["image"]}
simple_math = { git = "https://github.com/Mateholiker/simple_math" }
#simple_math = { path = "/home/jan/programming/rust/simple_math" }
replace_with = "0.1.7"